force-app/main/default/objects/Energy_Audit__c/Energy_Audit__c.object-meta.xml
<CustomObject>
    <label>Auditoria de energia</label>
    <nameField>
        <label>Nome de Auditoria de energia</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Auditorias de energia</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>