force-app/main/default/objects/Energy_Audit__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Auditorias de energia</relationshipLabel>
    <relationshipName>Auditorias_de_energia</relationshipName>
    <type>Lookup</type>
</CustomField>