force-app/main/default/objects/Energy_Audit__c/fields/Annual_Energy_Usage_kWh__c.field-meta.xml
<CustomField>
    <fullName>Annual_Energy_Usage_kWh__c</fullName>
    <inlineHelpText>Uso por pé quadrado</inlineHelpText>
    <label>Uso de energia anual (kWh)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>