force-app/main/default/objects/Energy_Audit__c/fields/Average_Annual_Electric_Cost__c.field-meta.xml
<CustomField>
    <fullName>Average_Annual_Electric_Cost__c</fullName>
    <inlineHelpText>Custo anual por pé quadrado</inlineHelpText>
    <label>Custo médio anual de energia</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>