force-app/main/default/objects/Energy_Audit__c/fields/Type_of_Installation__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Installation__c</fullName>
    <label>Tipo de instalação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Telhado</fullName>
            </value>
            <value>
                <fullName>Vaga do carro</fullName>
            </value>
            <value>
                <fullName>Montado no solo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>